src/test/ui/nll/ty-outlives/ty-param-fn-body-nll-feature.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn-body-nll-feature.rs:31:5
   |
31 |     outlives(cell, t)
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `T: 'a`...

error: aborting due to previous error

